# MCP342x

./: CMakeLists.txt  README.md  project.yml
.github/workflows/: ci.yml  release.yml
inc/: mcp342x.h  mcp342x_api.h
src/: mcp342x.c
template/: CMakeLists.txt  main.c
test/: test_mcp342x.c
